# cape-allocator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  serverless.yml
.github/workflows/: ci.yml
api/: dependencies.py  main.py  schemas.py
api/routers/: allocation.py  health.py  market.py  sensitivity.py
src/cape_allocator/: __init__.py
src/cape_allocator/calculations/: __init__.py  allocator.py  cape.py  merton.py  momentum.py
src/cape_allocator/cli/: __init__.py  main.py
src/cape_allocator/data/: __init__.py  cache.py  cpi.py  fred.py  shiller.py  yfinance.py
src/cape_allocator/models/: inputs.py  outputs.py
tests/: conftest.py  test_allocator.py  test_api_allocation.py  test_api_health.py  test_api_sensitivity.py  test_cape.py  test_merton.py  test_models.py
